--- a/PowerBiApi/PowerBiApi.csproj
+++ b/PowerBiApi/PowerBiApi.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <TypeScriptToolsVersion>3.1</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="client\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
